--- a/index.html
+++ b/index.html
@@ -636,35 +636,35 @@ footer{
  <div class="book">
       <img src="Allama-Syed-Sulaiman-Nadvi-ra-Shakhsiyyat-Aur-Adabi-Khidmaat_0000.jpg" alt="Allama-Syed-Sulaiman-Nadvi-ra-Shakhsiyyat-Aur-Adabi-Khidmaat">
       <h4>Allama-Syed-Sulaiman-Nadvi-ra-Shakhsiyyat-Aur-Adabi-Khidmaat</h4>
-      <a href="Allama-Syed-Sulaiman-Nadvi-ra-Shakhsiyyat-Aur-Adabi-Khidmaat.pdf">Download</a>
+      <a href="https://archive.org/download/Maktaba-Allama-Syed-Sulaiman-Nadvi-ra/Allama-Syed-Sulaiman-Nadvi-ra-Shakhsiyyat-Aur-Adabi-Khidmaat.pdf">Download</a>
     </div>
 
 
  <div class="book">
-      <img src="Allama-Syed-Sulaiman-Nadvi-ra-Shakhsiyyat-Aur-Adabi-Khidmaat_0000.jpg" alt="Allama-Syed-Sulaiman-Nadvi-ra-Shakhsiyyat-Aur-Adabi-Khidmaat">
-      <h4>Allama-Syed-Sulaiman-Nadvi-ra-Shakhsiyyat-Aur-Adabi-Khidmaat</h4>
-      <a href="Allama-Syed-Sulaiman-Nadvi-ra-Shakhsiyyat-Aur-Adabi-Khidmaat.pdf">Download</a>
+      <img src="Arab-wa-Hind-Kay-Talluqat_0000.jpg" alt="Arab-wa-Hind-Kay-Talluqat">
+      <h4>Arab-wa-Hind-Kay-Talluqat</h4>
+      <a href="https://archive.org/download/Maktaba-Allama-Syed-Sulaiman-Nadvi-ra/Arab-wa-Hind-Kay-Talluqat.pdf">Download</a>
     </div>
 
 
  <div class="book">
-      <img src="Ahl-al-Sunnah-wa-al-Jamaah_0000.jpg" alt="AAhl-al-Sunnah-wa-al-Jamaah">
-      <h4>Ahl-al-Sunnah-wa-al-Jamaah</h4>
-      <a href="Ahl-al-Sunnah-wa-al-Jamaah.pdf">Download</a>
+      <img src="Arabon-Ki-Jahaz-Rani_0000.jpg" alt="Arabon-Ki-Jahaz-Rani">
+      <h4>Arabon-Ki-Jahaz-Rani</h4>
+      <a href="https://archive.org/download/Maktaba-Allama-Syed-Sulaiman-Nadvi-ra/Arabon-Ki-Jahaz-Rani.pdf">Download</a>
     </div>
 
 
  <div class="book">
-      <img src="Ahl-al-Sunnah-wa-al-Jamaah_0000.jpg" alt="AAhl-al-Sunnah-wa-al-Jamaah">
-      <h4>Ahl-al-Sunnah-wa-al-Jamaah</h4>
-      <a href="Ahl-al-Sunnah-wa-al-Jamaah.pdf">Download</a>
+      <img src="Bareed-i-Farang-Khutoot-Ka-Majmoa_0000.jpg" alt="Bareed-i-Farang-Khutoot-Ka-Majmoa">
+      <h4>Bareed-i-Farang-Khutoot-Ka-Majmoa</h4>
+      <a href="https://archive.org/download/Maktaba-Allama-Syed-Sulaiman-Nadvi-ra/Bareed-i-Farang-Khutoot-Ka-Majmoa.pdf">Download</a>
     </div>
 
 
  <div class="book">
-      <img src="Ahl-al-Sunnah-wa-al-Jamaah_0000.jpg" alt="AAhl-al-Sunnah-wa-al-Jamaah">
-      <h4>Ahl-al-Sunnah-wa-al-Jamaah</h4>
-      <a href="Ahl-al-Sunnah-wa-al-Jamaah.pdf">Download</a>
+      <img src="Bushra_0000.jpg" alt="Bushra">
+      <h4>Bushra</h4>
+      <a href="https://archive.org/download/Maktaba-Allama-Syed-Sulaiman-Nadvi-ra/Bushra.pdf">Download</a>
     </div>
 
 
@@ -817,3 +817,4 @@ ebookTabs.forEach((btn, i) => {
 showAuthorGrid();
 </script>
 </html>
+
