--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>S S Nadwi Academy</title>
+<title>S S Nadwi Academy – Digital Library</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <!-- Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Noto+Nastaliq+Urdu&display=swap" rel="stylesheet">
 
@@ -817,4 +816,5 @@ ebookTabs.forEach((btn, i) => {
 showAuthorGrid();
 </script>
 </html>
+
 
