--- a/index.html
+++ b/index.html
@@ -31,9 +31,107 @@ body{
   color:#333;
   line-height:1.7;
 }
+header{
+  min-height:95vh;
+  background:
+    linear-gradient(135deg,rgba(2,6,23,.9),rgba(15,23,42,.9)),
+    url("https://images.unsplash.com/photo-1524995997946-a1c2e315a42f") center/cover;
+  color:#fff;
+  display:flex;
+  align-items:center;
+}
 
+.hero{
+  display:grid;
+  grid-template-columns:1.2fr .8fr;
+  gap:80px;
+  align-items:center;
+}
+
+.hero h1{
+  font-size:clamp(3rem,5vw,4rem);
+  line-height:1.1;
+}
+
+.hero p{
+  margin-top:20px;
+  font-size:1.15rem;
+  color:#e5e7eb;
+}
+
+.urdu{
+  font-family:'Noto Nastaliq Urdu',serif;
+  direction:rtl;
+  margin-top:30px;
+  font-size:1.3rem;
+}
+
+.search{
+  margin-top:40px;
+  display:flex;
+  max-width:520px;
+}
+
+.search input{
+  flex:1;
+  padding:16px 20px;
+  border:none;
+  font-size:15px;
+  border-radius:12px 0 0 12px;
+}
+
+.search button{
+  padding:0 26px;
+  background:var(--primary);
+  color:#fff;
+  border:none;
+  border-radius:0 12px 12px 0;
+  font-weight:600;
+  cursor:pointer;
+}
+
+.hero-box{
+  background:rgba(255,255,255,.08);
+  backdrop-filter:blur(12px);
+  border-radius:28px;
+  padding:50px;
+  text-align:center;
+}
+
+.hero-box img{
+  max-width:220px;
+  margin-bottom:20px;
+}
+
+/* ===== NAV ===== */
+nav{
+  position:sticky;
+  top:0;
+  background:#fff;
+  border-bottom:1px solid #e5e7eb;
+  z-index:100;
+}
+
+.navbar{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  padding:16px 0;
+}
+
+.navbar button{
+  background:none;
+  border:none;
+  margin-right:20px;
+  font-size:15px;
+  font-weight:600;
+  cursor:pointer;
+  color:#1e293b;
+}
+
+.navbar button.active{color:var(--primary)}
 /* ===== HEADER ===== */
-.hero-header{
+/*.hero-header{
   position:relative;
   min-height:10vh;
     background:
@@ -127,7 +225,7 @@ nav button:hover{color:#fff;border-bottom:3px solid var(--primary);}
 }
 .tab-content.active {
   display: block;
-}
+}*/
 
 /* ===== HERO ===== */
 .hero {
@@ -816,5 +914,6 @@ ebookTabs.forEach((btn, i) => {
 showAuthorGrid();
 </script>
 </html>
+
 
 
